Konzolon működik a counter"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <button class="btn-plus1">Klikk</button>
+
+    <button>Klikk</button>
+    <p id="haha"></p>
+
 </body>
 
 </html>
