--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-
     <button>Klikk</button>
-    <p id="haha"></p>
 
+    <div class="count">
+
+    </div>
 </body>
 
 </html>
