--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Counter Debug</title>
-    <script src="dist/app.js"></script>
+    <script type="module" src="dist/controller.js"></script>
+
 </head>
 
 <body>
-    <button>Klikk</button>
-
-    <div class="count">
+    <div class='render'>
 
     </div>
+
+
+    </div>
+
 </body>
 
 </html>
